--- a/notebooks/colab.ipynb
+++ b/notebooks/colab.ipynb
@@ -1,55 +1,125 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "11425bc8",
-   "metadata": {},
-   "source": [
-    "# Sample Notebook"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "11425bc8",
+      "metadata": {
+        "id": "11425bc8"
+      },
+      "source": [
+        "# Sample Notebook\n",
+        "\n",
+        "1. Setup Google Cloud service account\n",
+        "2. Download JSON auth keys and upload to the files\n",
+        "2. Share Google Drive folder with service account"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "67f21148",
+      "metadata": {
+        "id": "67f21148"
+      },
+      "outputs": [],
+      "source": [
+        "%%capture\n",
+        "!pip install dvc[gdrive]\n",
+        "!git clone https://github.com/pavelihno/colab-dvc-template.git"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd colab-dvc-template/"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XgzOX2ALE-Ap",
+        "outputId": "314e167f-5a80-4987-b707-48027eb44bd2"
+      },
+      "id": "XgzOX2ALE-Ap",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/colab-dvc-template\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "GDRIVE_FOLDER_ID = '<FOLDER_ID>'\n",
+        "SERVICE_ACCOUNT_KEY_PATH = '/content/service-key.json'\n",
+        "\n",
+        "os.environ['GDRIVE_FOLDER_ID'] = GDRIVE_FOLDER_ID\n",
+        "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = SERVICE_ACCOUNT_KEY_PATH\n",
+        "\n",
+        "!dvc remote add -d gdrive \"gdrive://$GDRIVE_FOLDER_ID\"\n",
+        "!dvc remote modify gdrive gdrive_use_service_account true\n",
+        "!dvc remote modify gdrive gdrive_service_account_json_file_path \"$GOOGLE_APPLICATION_CREDENTIALS\"\n",
+        "!dvc pull"
+      ],
+      "metadata": {
+        "id": "f3XL3sALSNtg",
+        "outputId": "6c544585-e8e1-41dc-8a1b-f50d1db7594a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "f3XL3sALSNtg",
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Setting 'gdrive' as a default remote.\n",
+            "Collecting          |0.00 [00:00,    ?entry/s]\n",
+            "Fetching\n",
+            "!\u001b[A\n",
+            "  0% |          |0/? [00:00<?,    ?files/s]\u001b[A\n",
+            "Fetching\n",
+            "Building workspace index          |7.00 [00:00,  388entry/s]\n",
+            "Comparing indexes          |8.00 [00:00, 1.05kentry/s]\n",
+            "Applying changes          |0.00 [00:00,     ?file/s]\n",
+            "Everything is up to date.\n",
+            "\u001b[0m"
+          ]
+        }
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": ".venv",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.8"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67f21148",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install dvc[gdrive] tensorflow[and-cuda]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3498c6a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git clone https://github.com/pavelihno/colab-dvc-template.git\n",
-    "!cd colab-dvc-template\n",
-    "!dvc pull"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": ".venv",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.8"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
