Google Colab and DVC setup

--- a/notebooks/colab.ipynb
+++ b/notebooks/colab.ipynb
@@ -15,6 +15,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Setting up codebase and DVC"
+      ],
+      "metadata": {
+        "id": "lKN2TA-5WYhk"
+      },
+      "id": "lKN2TA-5WYhk"
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "id": "67f21148",
@@ -38,7 +48,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XgzOX2ALE-Ap",
-        "outputId": "314e167f-5a80-4987-b707-48027eb44bd2"
+        "outputId": "7c46e911-a64b-4566-8a49-4afc472bdfd5"
       },
       "id": "XgzOX2ALE-Ap",
       "execution_count": 2,
@@ -61,41 +71,77 @@
         "SERVICE_ACCOUNT_KEY_PATH = '/content/service-key.json'\n",
         "\n",
         "os.environ['GDRIVE_FOLDER_ID'] = GDRIVE_FOLDER_ID\n",
-        "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = SERVICE_ACCOUNT_KEY_PATH\n",
-        "\n",
-        "!dvc remote add -d gdrive \"gdrive://$GDRIVE_FOLDER_ID\"\n",
+        "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = SERVICE_ACCOUNT_KEY_PATH"
+      ],
+      "metadata": {
+        "id": "f3XL3sALSNtg"
+      },
+      "id": "f3XL3sALSNtg",
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%capture\n",
+        "!dvc remote add -d -f gdrive \"gdrive://$GDRIVE_FOLDER_ID\"\n",
         "!dvc remote modify gdrive gdrive_use_service_account true\n",
         "!dvc remote modify gdrive gdrive_service_account_json_file_path \"$GOOGLE_APPLICATION_CREDENTIALS\"\n",
         "!dvc pull"
       ],
       "metadata": {
-        "id": "f3XL3sALSNtg",
-        "outputId": "6c544585-e8e1-41dc-8a1b-f50d1db7594a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "gh0sr6-JbWyI"
       },
-      "id": "f3XL3sALSNtg",
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Setting 'gdrive' as a default remote.\n",
-            "Collecting          |0.00 [00:00,    ?entry/s]\n",
-            "Fetching\n",
-            "!\u001b[A\n",
-            "  0% |          |0/? [00:00<?,    ?files/s]\u001b[A\n",
-            "Fetching\n",
-            "Building workspace index          |7.00 [00:00,  388entry/s]\n",
-            "Comparing indexes          |8.00 [00:00, 1.05kentry/s]\n",
-            "Applying changes          |0.00 [00:00,     ?file/s]\n",
-            "Everything is up to date.\n",
-            "\u001b[0m"
-          ]
-        }
-      ]
+      "id": "gh0sr6-JbWyI",
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Import libraries"
+      ],
+      "metadata": {
+        "id": "8Et1HRnVWgW8"
+      },
+      "id": "8Et1HRnVWgW8"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "\n",
+        "from src.train import train_model\n",
+        "from src.eval import evaluate_model\n",
+        "from src.utils import load_config, generate_sample_data\n",
+        "from src.model.sample import SampleNeuralNetwork"
+      ],
+      "metadata": {
+        "id": "v6SEkgk2WkIk"
+      },
+      "id": "v6SEkgk2WkIk",
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Training and evaluating model"
+      ],
+      "metadata": {
+        "id": "lwaq1le2ckwD"
+      },
+      "id": "lwaq1le2ckwD"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_tIStr9FcqL3"
+      },
+      "id": "_tIStr9FcqL3",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
