Enhance Google Colab workflow documentation; outline setup, DVC configuration, and model training steps

--- a/notebooks/colab.ipynb
+++ b/notebooks/colab.ipynb
@@ -16,17 +16,17 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Setting up codebase and DVC"
-      ],
+      "id": "lKN2TA-5WYhk",
       "metadata": {
         "id": "lKN2TA-5WYhk"
       },
-      "id": "lKN2TA-5WYhk"
+      "source": [
+        "### Setting up codebase and DVC"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "67f21148",
       "metadata": {
         "id": "67f21148"
@@ -34,15 +34,14 @@
       "outputs": [],
       "source": [
         "%%capture\n",
-        "!pip install dvc[gdrive]\n",
+        "!pip install dvc[gdrive] mlflow pyyaml\n",
         "!git clone https://github.com/pavelihno/colab-dvc-template.git"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%cd colab-dvc-template/"
-      ],
+      "execution_count": 2,
+      "id": "XgzOX2ALE-Ap",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -50,20 +49,27 @@
         "id": "XgzOX2ALE-Ap",
         "outputId": "7c46e911-a64b-4566-8a49-4afc472bdfd5"
       },
-      "id": "XgzOX2ALE-Ap",
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/colab-dvc-template\n"
           ]
         }
+      ],
+      "source": [
+        "%cd colab-dvc-template/"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "id": "f3XL3sALSNtg",
+      "metadata": {
+        "id": "f3XL3sALSNtg"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "\n",
@@ -72,42 +78,42 @@
         "\n",
         "os.environ['GDRIVE_FOLDER_ID'] = GDRIVE_FOLDER_ID\n",
         "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = SERVICE_ACCOUNT_KEY_PATH"
-      ],
-      "metadata": {
-        "id": "f3XL3sALSNtg"
-      },
-      "id": "f3XL3sALSNtg",
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "id": "gh0sr6-JbWyI",
+      "metadata": {
+        "id": "gh0sr6-JbWyI"
+      },
+      "outputs": [],
       "source": [
         "%%capture\n",
         "!dvc remote add -d -f gdrive \"gdrive://$GDRIVE_FOLDER_ID\"\n",
         "!dvc remote modify gdrive gdrive_use_service_account true\n",
         "!dvc remote modify gdrive gdrive_service_account_json_file_path \"$GOOGLE_APPLICATION_CREDENTIALS\"\n",
         "!dvc pull"
-      ],
-      "metadata": {
-        "id": "gh0sr6-JbWyI"
-      },
-      "id": "gh0sr6-JbWyI",
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Import libraries"
-      ],
+      "id": "8Et1HRnVWgW8",
       "metadata": {
         "id": "8Et1HRnVWgW8"
       },
-      "id": "8Et1HRnVWgW8"
+      "source": [
+        "### Import libraries"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "v6SEkgk2WkIk",
+      "metadata": {
+        "id": "v6SEkgk2WkIk"
+      },
+      "outputs": [],
       "source": [
         "import tensorflow as tf\n",
         "\n",
@@ -115,36 +121,84 @@
         "from src.eval import evaluate_model\n",
         "from src.utils import load_config, generate_sample_data\n",
         "from src.model.sample import SampleNeuralNetwork"
-      ],
-      "metadata": {
-        "id": "v6SEkgk2WkIk"
-      },
-      "id": "v6SEkgk2WkIk",
-      "execution_count": 15,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Training and evaluating model"
-      ],
+      "id": "lwaq1le2ckwD",
       "metadata": {
         "id": "lwaq1le2ckwD"
       },
-      "id": "lwaq1le2ckwD"
+      "source": [
+        "### Training and evaluating model"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "id": "_tIStr9FcqL3",
       "metadata": {
         "id": "_tIStr9FcqL3"
       },
-      "id": "_tIStr9FcqL3",
+      "outputs": [],
+      "source": [
+        "config = load_config('configs/default.yaml')\n",
+        "\n",
+        "run_id, model_path = train_model(config)\n",
+        "\n",
+        "print(f'\\nTraining completed!')\n",
+        "print(f'Run ID: {run_id}')\n",
+        "print(f'Model saved to: {model_path}')"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "id": "eacb287a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Evaluate using the run_id from training\n",
+        "metrics = evaluate_model(config, run_id=run_id)\n",
+        "\n",
+        "print(f'\\nEvaluation Results:')\n",
+        "print(f'Test Loss: {metrics[\"test_loss\"]:.4f}')\n",
+        "print(f'Test Accuracy: {metrics[\"test_accuracy\"]:.4f}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "e2b04ced",
+      "metadata": {},
+      "source": [
+        "### Push MLflow artifacts to DVC/Google Drive"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "3b4c6bb0",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!dvc add mlruns\n",
+        "\n",
+        "!dvc add data/*.npy\n",
+        "!dvc add models/*.keras\n",
+        "\n",
+        "!git add mlruns.dvc data/*.dvc models/*.dvc .gitignore\n",
+        "!git commit -m \"Update MLflow experiments, data, and models\"\n",
+        "\n",
+        "!dvc push\n",
+        "\n",
+        "print(\"MLflow artifacts synced to Google Drive!\")"
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": ".venv",
       "language": "python",
@@ -161,9 +215,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.12.8"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
